# robot_ros1_ws

./: snapcraft.yaml
owl_description/: CMakeLists.txt  package.xml  requirements.txt
owl_description/config/: bounding_box.yaml  gazebo_controller.yaml  mimic_controller.yaml
owl_description/launch/: obstacle_moveit.launch  rviz.launch
owl_description/rviz/: rviz.rviz
owl_description/src/: CoM_markers.py  create_ROI.py  draw_ROI.py  explore_regions.py  extract_grasp.py  get_pointcloud.py  get_tf.py  owl_ping.py  ply_publisher.py  save_pcd.py  send_tf.py  test.py  urdf_update_checker.py  urdf_update_service.py
owl_description/urdf/: box.xacro  d435.gazebo.xacro  d435.urdf.xacro  owl.gazebo.xacro  owl.sdf  owl.urdf  owl_robot.urdf  owl_robot.xacro  robotiq_v2.xacro  urdf_6_3.xacro
owl_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
owl_moveit_config/config/: fake_controllers.yaml  gazebo_owl_d435.urdf  kinematics.yaml  ompl_planning.yaml  owl_d435.srdf  ros_controllers.yaml  sensors_3d.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
owl_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  (+8 more)
owl_moveit_driver/: CMakeLists.txt  package.xml  requirements.txt
owl_moveit_driver/launch/: driver.launch
owl_moveit_driver/scripts/: owl_moveit_driver.py  pick_and_place.py
owl_moveit_driver/scripts/utils/: __init__.py  logger.py  toppra_parameterization.py
