<?xml version="1.0"?>
<package>
  <name>owl_description</name>
  <version>0.0.0</version>
  <description>The owl_description package</description>


  <maintainer email="meher.d@orangewood.co">Meher</maintainer>

  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
